feat: login and generate JWT
