# app/routes/api/v1/auth.go
@@ -1,0 +1,15 @@
+package v1
+
+import (
+	controllerV1 "goshaka/app/controllers/v1"
+
+	"goshaka/app/validator"
+
+	"github.com/gofiber/fiber/v2"
+)
+
+func AuthRoute(router fiber.Router) {
+	auth := router.Group("/auth")
+
+	auth.Post("/login", validator.LoginValidator, controllerV1.Login)
+}
