# app/structs/auth.go
@@ -1,0 +1,6 @@
+package structs
+
+type Login struct {
+	Email    string `json:"email" validate:"required"`
+	Password string `json:"password" validate:"required"`
+}
